# yfinance-ta-patterns

./: .gitignore  LICENSE  README.md  main.py  pattern_analyzer.py  pattern_tester.py  pyproject.toml
.github/workflows/: ci.yml  nightly-nuitka-release.yml  publish.yml
tests/: test_cli.py  test_forex_data_loader.py
yfinance_ta_patterns/: __init__.py  cli.py  forex_data_loader.py
